--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,25 +23,33 @@
             android:label="@string/list_of_saved_files_activity"
             android:parentActivityName=".MainActivity" />
 
+        <activity
+            android:name=".FutureReleaseActivity"
+            android:label="We're sorry!"
+            android:parentActivityName=".MainActivity"/>
+
         <service
             android:name=".MessageListenerService"
             android:enabled="true"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data android:scheme="wear" android:host="*" />
+
+                <data
+                    android:host="*"
+                    android:scheme="wear" />
             </intent-filter>
         </service>
 
-        <activity android:name=".ViewFileActivity"
-            android:parentActivityName=".ViewFileActivity"/>
+        <activity
+            android:name=".ViewFileActivity"
+            android:parentActivityName=".ViewFileActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.jake.heartbeat04.fileprovider"
-            android:grantUriPermissions="true"
-            android:exported="false">
+            android:exported="false"
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/filepaths" />
